<resources>
    <string name="app_name">SakuGuru</string>
    <string name="app_name_Jadwal_Utama">SAKU GURU</string>
    <string name="nama_user">Hidayatulhidayah, M.Pd</string>
    <string name="email_user">hidayatul@gmail.com</string>
    <string name="work_user">Telkom University</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="country_arrays">
        <item>X</item>
        <item>XI</item>
        <item>XII</item>
    </string-array>
    <string name="textNewAbsensiPelajaran">Choose New</string>
    <string name="tempatMengajarAddJadwal">Tempat Mengajar : </string>
    <string name="ruanganAddJadwal">Ruangan : </string>
    <string name="mataPelajaranAddJadwal">Mata Pelajaran : </string>
    <string name="jamAddJadwal">Jam : </string>
    <string name="hariAddJadwal">Hari/Tanggal : </string>
    <string name="saveAddJadwal">SAVE</string>
    <string name="userLogin">Username : </string>
    <string name="passLogin">Password : </string>
    <string name="infoLogin">Belum Punya Akun ? .. </string>
    <string name="signUpLogin"> Sign Up</string>
    <string name="logLogin">LOGIN</string>
    <string name="infoSignUp">Sign Up for free</string>
    <string name="namaSignUp">Nama </string>
    <string name="nipSignUp">NIP </string>
    <string name="tglSignUp">Tanggal Lahir</string>
    <string name="infoJenKelSignUp">Jenis Kelamin : </string>
    <string name="lakiSignUp">Laki-Laki</string>
    <string name="perempuanSignUp">Perempuan</string>
    <string name="alamatSignUp">Alamat</string>
    <string name="emailSignUp">Email</string>
    <string name="passwordSignUp">Password</string>
    <string name="repassSignUp">Re-Type Password</string>
    <string name="cancelSignUp">Cancel</string>
    <string name="fotoFr1">FOTO</string>
    <string name="contohNimFr1">6706161103</string>
    <string name="dateFr1">date</string>
    <string name="contohRppFr2">RPP KD 2</string>
    <string name="contohRpp2Fr2">RPP KD 5</string>
    <string name="soalFr3">Soal Ujian</string>
    <string name="materiFr3">Materi</string>
    <string name="quizFr3">Soal quiz</string>
</resources>
