<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.elkha.zik.sakuguru.SignUp"
    android:padding="15dp"
    android:background="@color/backgroundColor"
    android:orientation="vertical">
    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoSignUp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/signUp_Nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/namaSignUp"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"/>
    <EditText
        android:id="@+id/signUp_Nip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nipSignUp"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"/>
    <EditText
        android:id="@+id/signUp_Ttl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tglSignUp"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"
        android:onClick="pop" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:text="Jenis Kelamin : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="15sp" />
        <RadioButton
            android:id="@+id/laki"
            android:layout_width="wrap_content"
            android:text="@string/lakiSignUp"
            android:textColor="@color/textColor"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/perempuan"
            android:layout_width="wrap_content"
            android:text="@string/perempuanSignUp"
            android:textColor="@color/textColor"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <EditText
        android:id="@+id/signUp_Alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alamatSignUp"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"/>
    <EditText
        android:id="@+id/signUp_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailSignUp"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"/>
    <EditText
        android:id="@+id/signUp_Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordSignUp"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"/>
    <EditText
        android:id="@+id/signUp_rePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repassSignUp"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <Button
            android:id="@+id/ButtonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelSignUp"
            android:onClick="backLogin"
            android:background="#5E412F"
            android:layout_margin="10dp"
            android:textColor="@color/backgroundColor"/>
        <Button
            android:id="@+id/ButtonSignCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpLogin"
            android:onClick="signUpDone"
            android:layout_margin="10dp"
            android:textColor="@color/backgroundColor"
            android:background="#5E412F"/>
    </LinearLayout>
</LinearLayout>
