<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.elkha.zik.sakuguru.LoginScreen">
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:background="@color/layoutColor">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:background="@drawable/sakuguru"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userLogin"
            android:textColor="@color/textColor"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userLogin"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:inputType="text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passLogin"
            android:textColor="@color/textColor"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passLogin"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:inputType="textPassword"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infoLogin"
                android:textSize="13sp"
                android:textColor="@color/textColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpLogin"
                android:textSize="13sp"
                android:textColor="#0000ff"
                android:onClick="signUp"/>
        </LinearLayout>
        <Button
            android:id="@+id/login"
            android:layout_marginTop="15dp"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/logLogin"
            android:background="@color/textColor"
            android:textColor="@color/backgroundColor"
            android:onClick="login"/>
    </LinearLayout>
</RelativeLayout>
