<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elkha.zik.sakuguru.ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border">

        <RelativeLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="56dp"
            android:background="#78c0a8"
            android:padding="16dp"
            tools:ignore="NotSibling">


            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foto"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:text="@string/nama_user"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/nip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nama"
                android:layout_centerHorizontal="true"
                android:paddingLeft="10dp"
                android:text="@string/contohNimFr1"
                android:textColor="@color/textColor"
                android:textSize="14dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/foto"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profile_guru" />


        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_action_save" />

        <RelativeLayout
            android:id="@+id/tamp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profile"
            android:layout_marginTop="29dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="54dp"
                android:layout_marginStart="54dp"
                android:src="@drawable/mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:foregroundGravity="fill_horizontal"
                android:text="@string/email_user" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tamp_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tamp_email">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="54dp"
                android:layout_marginStart="54dp"
                android:src="@drawable/work" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:text="@string/work_user" />


        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>